# Toolgap-Kv

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  pyproject.toml
configs/: phase0.json
docs/agent-kv/: A0.1_ALIYUN_GPU_RUNBOOK.md  ARCHITECTURE.md  DECISIONS.md  EVALUATION.md  EXTERNAL_REVIEW_BRIEF.md  FIRST_PRINCIPLES.md  INTERVIEW_MAP.md  NARRATIVE.md  PROJECT.md  README.md  RELATED_WORK.md  ROADMAP.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/interview-prep/: AI_INFRA_INTERVIEW_READINESS.html  AI_INFRA_INTERVIEW_READINESS.md
docs/research/: 2026-07-12-agent-kv-lifecycle-prior-art.md  2026-07-13-ai-infra-project-portfolio-review-prompt.md  2026-07-13-serving-kv-project-directions.md  2026-07-13-wechat-ai-infra-article-ledger.md  2026-07-16-pytorch-serving-first-onramp.md  2026-07-18-reusable-agent-kv-work-gate-a-survey.md  2026-07-18-ticket-1-rd-baseline-report.md  2026-07-18-vllm-v0.25.1-gate-a-source-audit.md  2026-07-18-vllm-version-selection-ecosystem-survey.md  2026-07-19-external-kv-control-engine-policy-conflict-survey.md  2026-07-19-inference-model-selection-ecosystem-survey.md  2026-07-19-storage-data-plane-to-kv-serving-transfer.md  2026-07-19-toolgap-apc-problem-reality-survey.md
experiments/0001-mechanism-feasibility/: A0.1-results-2026-07-22.md  A0.1-token-roundtrip-spec.md  A0.2-stock-sufficiency-spec.md  (+5 more)
patches/: README.md
scripts/: build_interview_readiness_html.py  check_repository.py  run_a01.py
tests/: test_a01.py  test_build_interview_readiness_html.py  test_phase0.py  test_repository_check.py
(+63 files in other folders)
